added watch:dev mode

--- a/tempbuild/index.html
+++ b/tempbuild/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poop's blog</title>
+    <title>geekodour's blog</title>
     <meta name="description" content="">
     <meta name="author" content="Hrishikesh Barman">
 
@@ -52,7 +52,10 @@
           <div class="column is-half">
               <ul>
               <li>
-                <a href="/posts/Haskell-in-ES6-Part-1.html">Haskell in ES6: Part 1</a>
+                <a href="/posts/Accessing-JavaScript-binary-data-in-C.html">Accessing JavaScript binary data in C++</a>
+              </li>
+              <li>
+                <a href="/posts/Ring-buffers-and-moving-averages.html">Ring buffers and moving averages</a>
               </li>
               </ul>
           </div>
