--- a/tempbuild/4.html
+++ b/tempbuild/4.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poop's blog</title>
+    <title>geekodour's blog</title>
     <meta name="description" content="">
     <meta name="author" content="Hrishikesh Barman">
 
@@ -52,7 +52,10 @@
           <div class="column is-half">
               <ul>
               <li>
-                <a href="/posts/Haskell-in-ES6-Part-1.html">Haskell in ES6: Part 1</a>
+                <a href="/posts/Generic-binary-trees.html">Generic binary trees</a>
+              </li>
+              <li>
+                <a href="/posts/Getting-clever-with-l-calculus.html">Getting clever with λ-calculus</a>
               </li>
               </ul>
           </div>
