--- a/tempbuild/5.html
+++ b/tempbuild/5.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>poop's blog</title>
+    <title>geekodour's blog</title>
     <meta name="description" content="">
     <meta name="author" content="Hrishikesh Barman">
 
@@ -52,7 +52,10 @@
           <div class="column is-half">
               <ul>
               <li>
-                <a href="/posts/Haskell-in-ES6-Part-1.html">Haskell in ES6: Part 1</a>
+                <a href="/posts/Haskell-in-ES6-Project-Euler-1-5.html">Haskell in ES6: Project Euler 1-5</a>
+              </li>
+              <li>
+                <a href="/posts/Haskell-in-ES6-Part-2.html">Haskell in ES6: Part 2</a>
               </li>
               </ul>
           </div>
