--- a/themes/newbulmadefault/category_page.html
+++ b/themes/newbulmadefault/category_page.html
@@ -16,7 +16,9 @@
   <div class="container">
     <h3 class="title is-5">Posts tagged "{{label.name}}"</h3>
     <div id="category_posts_container"></div>
-    <div id="loadmore_container" class="has-text-centered"></div>
+    <div id="loadmore_container" class="has-text-centered">
+      <div class="button is-danger is-loading" id="loadmore_button">Load more</div>
+    </div>
   </div>
 </div>
 {% endblock %}
