--- a/themes/newbulmadefault/category_page.html
+++ b/themes/newbulmadefault/category_page.html
@@ -6,7 +6,8 @@
   window.blogInfo = {
           pageType: 'category',
           bc: {{ bc|stringify|safe }},
-          label: '{{label.name}}'
+          label: '{{label.name}}',
+          baseurl: '{{ baseurl }}'
   };
   </script>
 {% endblock %}
