--- a/themes/newbulmadefault/snippets/base.html
+++ b/themes/newbulmadefault/snippets/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Hrishikesh Barman">
 
     {% block css %}
-    <link href="/assets/main.css" rel="stylesheet">
+    <link href={{ "/assets/main.css"|addbaseurl }} rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
     {% endblock %}
 
@@ -28,7 +28,7 @@
       {% if comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
       {% if comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-      <script src="/assets/main.js"></script>
+      <script src={{ "/assets/main.js"|addbaseurl }}></script>
       {% endblock javascript %}
   </body>
 </html>
