--- a/themes/newbulmadefault/snippets/navbar.html
+++ b/themes/newbulmadefault/snippets/navbar.html
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="nav-left"></div>
   <div class="nav-center">
-  <a class="nav-item title is-5" href="/">
+  <a class="nav-item title is-5" href={{ "/"|addbaseurl }}>
     {{ meta.blog_name }}
   </a>
   </div>
