--- a/themes/newbulmadefault/snippets/navbar.html
+++ b/themes/newbulmadefault/snippets/navbar.html
@@ -2,7 +2,7 @@
   <div class="nav-left"></div>
   <div class="nav-center">
   <a class="nav-item title is-5" href={{ "/"|addbaseurl }}>
-    {{ meta.blog_name }}
+    {{ bc.meta.blog_name }}
   </a>
   </div>
   <span id="nav-toggle" class="nav-toggle">
