--- a/themes/newbulmadefault/snippets/aboutbox.html
+++ b/themes/newbulmadefault/snippets/aboutbox.html
@@ -15,5 +15,8 @@
     <div class="content">
       <small>I am Hrishikesh</small>
     </div>
+    <div class="content">
+      <button id="signout_button" class="button is-info is-hidden">github signout</button>
+    </div>
   </div>
 </div>
