--- a/themes/newbulmadefault/snippets/base.html
+++ b/themes/newbulmadefault/snippets/base.html
@@ -25,8 +25,8 @@
       {% include 'snippets/footer.html' %}
 
       {% block javascript %}
-      {% if comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
-      {% if comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
+      {% if bc.comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
+      {% if bc.comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
       <script src={{ "/assets/main.js"|addbaseurl }}></script>
       {% endblock javascript %}
