--- a/themes/gitpushblogdefault/snippets/aboutbox.html
+++ b/themes/gitpushblogdefault/snippets/aboutbox.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="content">
-      <small>I am Hrishikesh</small>
+      <small>I am Hrishikesh Barman</small>
     </div>
     <div class="content">
       <button id="signout_button" class="button is-info is-hidden">github signout</button>
