updated the-plain to gitpushblog

--- a/themes/KeepSimple20/post_page.html
+++ b/themes/KeepSimple20/post_page.html
@@ -18,7 +18,7 @@
 								<span class="meta-sep">&bull;</span>
 								<li>
                                     {% for label in post.labels %}
-                                    <a href="#" title="" rel="category tag">{{ label.name }}</a>
+                                    <a href="{{ '/category/'|addbaseurl }}{{ label.slug }}" title="" rel="category tag">{{ label.name }}</a>
                                     {% endfor %}
 								</li>
 								<span class="meta-sep">&bull;</span>
