--- a/themes/the-plain/snippets/base.html
+++ b/themes/the-plain/snippets/base.html
@@ -11,6 +11,7 @@
       <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/touch-icon.png">
 
       <link rel="stylesheet" href="{{ '/assets/main.css'|addbaseurl }}">
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 
       <link rel="canonical" href="{{ ""|addbaseurl }}">
 
@@ -34,6 +35,15 @@
 		</main>
 
 		{% include 'snippets/footer.html' %}
+
+
+        {% block javascript %}
+          {% if bc.comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
+          {% if bc.comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
+          <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+          <script src={{ "/assets/main.js"|addbaseurl }}></script>
+        {% endblock javascript %}
+
 
 	</body>
 
