--- a/themes/lagom/index.html
+++ b/themes/lagom/index.html
@@ -1,13 +1,18 @@
----
-layout: default
-title: Blog Posts
----
+{% extends 'snippets/base.html' %}
 
+{% block inlinejavascript %}
+  {{ super() }}
+  window.blogInfo.pageType = 'index';
+{% endblock %}
+
+{% block pagecontent %}
 <div id="home">
   <h2><i class="fa fa-bookmark"></i> Blog Posts</h2>
   <ul id="blog-posts" class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% for post in posts %}
+    <li><span>{{ post.date|date }} &raquo;</span><a href="{{ '/posts/'|addbaseurl }}{{ post.slug }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  {% include 'snippets/pagination.html' %}
 </div>
+{% endblock %}
