--- a/themes/KeepSimple20/post_page.html
+++ b/themes/KeepSimple20/post_page.html
@@ -1,4 +1,5 @@
 {% extends 'snippets/base.html' %}
+{% block title %}{{ post.title }}{% endblock title %}
 
 {% block inlinejavascript %}
   {{ super() }}
