--- a/themes/lagom/snippets/social.html
+++ b/themes/lagom/snippets/social.html
@@ -1,72 +1,72 @@
 Follow me:
 <div id="stalker">
-  {% if site.data.theme.social.github %}
-  <a title="{{ site.data.theme.social.github }} on Github" href="https://github.com/{{ site.data.theme.social.github }}">
+  {% if tc.social.github %}
+  <a title="{{ tc.social.github }} on Github" href="https://github.com/{{ tc.social.github }}">
     <i class="fa fa-github-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.bitbucket %}
-  <a title="{{ site.data.theme.social.bitbucket }} on Bitbucket" href="https://bitbucket.com/{{ site.data.theme.social.bitbucket }}/">
+  {% if tc.social.bitbucket %}
+  <a title="{{ tc.social.bitbucket }} on Bitbucket" href="https://bitbucket.com/{{ tc.social.bitbucket }}/">
     <i class="fa fa-bitbucket-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.hacker_news %}
-  <a title="{{ site.data.theme.social.hacker_news }} on Hacker News" href="https://news.ycombinator.com/user?id={{site.data.theme.social.hacker_news }}">
+  {% if tc.social.hacker_news %}
+  <a title="{{ tc.social.hacker_news }} on Hacker News" href="https://news.ycombinator.com/user?id={{tc.social.hacker_news }}">
      <i class="fa fa-hacker-news"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.stackexchange %}
-  <a title="{{ site.data.theme.name }} on Stack Exchange" href="https://stackexchange.com/users/{{site.data.theme.social.stackexchange }}">
+  {% if tc.social.stackexchange %}
+  <a title="{{ tc.name }} on Stack Exchange" href="https://stackexchange.com/users/{{tc.social.stackexchange }}">
     <i class="fa fa-stack-exchange"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.stackoverflow %}
-  <a title="{{ site.data.theme.name }} on Stack Overflow" href="http://stackoverflow.com/users/{{site.data.theme.social.stackoverflow }}">
+  {% if tc.social.stackoverflow %}
+  <a title="{{ tc.name }} on Stack Overflow" href="http://stackoverflow.com/users/{{tc.social.stackoverflow }}">
     <i class="fa fa-stack-overflow"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.twitter %}
-  <a title="{{ site.data.theme.social.twitter }} on Twitter" href="https://twitter.com/{{ site.data.theme.social.twitter }}">
+  {% if tc.social.twitter %}
+  <a title="{{ tc.social.twitter }} on Twitter" href="https://twitter.com/{{ tc.social.twitter }}">
     <i class="fa fa-twitter-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.facebook %}
-  <a title="{{ site.data.theme.name }} on Facebook" href="https://facebook.com/{{ site.data.theme.social.facebook }}">
+  {% if tc.social.facebook %}
+  <a title="{{ tc.name }} on Facebook" href="https://facebook.com/{{ tc.social.facebook }}">
     <i class="fa fa-facebook-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.tumblr %}
-  <a title="{{ site.data.theme.name }} on tumblr" href="https://{{ site.data.theme.social.tumblr }}.tumblr.com">
+  {% if tc.social.tumblr %}
+  <a title="{{ tc.name }} on tumblr" href="https://{{ tc.social.tumblr }}.tumblr.com">
     <i class="fa fa-tumblr-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.linkedin %}
-  <a title="{{ site.data.theme.name }} on LinkedIn" href="https://www.linkedin.com/in/{{ site.data.theme.social.linkedin }}">
+  {% if tc.social.linkedin %}
+  <a title="{{ tc.name }} on LinkedIn" href="https://www.linkedin.com/in/{{ tc.social.linkedin }}">
     <i class="fa fa-linkedin-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.gplus %}
-  <a title="{{ site.data.theme.name }} on Google Plus" href="https://plus.google.com/{{ site.data.theme.social.gplus }}">
+  {% if tc.social.gplus %}
+  <a title="{{ tc.name }} on Google Plus" href="https://plus.google.com/{{ tc.social.gplus }}">
     <i class="fa fa-google-plus-square"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.social.flickr %}
-  <a title="{{ site.data.theme.name }} on Flickr" href="https://www.flickr.com/photos/{{ site.data.theme.social.flickr }}">
+  {% if tc.social.flickr %}
+  <a title="{{ tc.name }} on Flickr" href="https://www.flickr.com/photos/{{ tc.social.flickr }}">
     <i class="fa fa-flickr"></i>
   </a>
   {% endif %}
 
-  {% if site.data.theme.show_atom_feed %}
+  {% if tc.show_atom_feed %}
   <a title="Atom feed" id="atom" href="/atom.xml">
     <i class="fa fa-rss-square"></i>
   </a>
