--- a/themes/lagom/index.html
+++ b/themes/lagom/index.html
@@ -1,4 +1,5 @@
 {% extends 'snippets/base.html' %}
+{% block title %}{{ bc.meta.blog_name }}{% endblock title %}
 
 {% block inlinejavascript %}
   {{ super() }}
