added homepage support

--- a/themes/the-plain/snippets/navbar.html
+++ b/themes/the-plain/snippets/navbar.html
@@ -7,5 +7,6 @@
 <aside class="" style="">
   <a class="" href="{{ '/about'|addbaseurl }}">About</a>
   <a class="" href="{{ '/about'|addbaseurl }}">Projects</a>
+  <a id="signout_button" class="" href="">Signout</a>
 </aside>
 </section>
