dist not working

--- a/themes/the-plain/pages/about.html
+++ b/themes/the-plain/pages/about.html
@@ -16,6 +16,6 @@
 </article>
 
 <div class="page-navigation">
-	<a class="home" href="{{ "/"|addbaseurl }}" title="Back to Homepage">Home</a>
+	<a class="home" href="{{ '/'|addbaseurl }}" title="Back to Homepage">Home</a>
 </div>
 {% endblock %}
