--- a/themes/the-plain/pages/work.html
+++ b/themes/the-plain/pages/work.html
@@ -8,11 +8,13 @@
 {% block pagecontent %}
 <article>
 
-	<h1 class="title">not found page</h1>
+	<h1 class="title">My work</h1>
 
 	<div class="divider"></div>
+	<h3 class="">OpenSource Contributions</h3>
+	<h3 class="">Personal Projects</h3>
+	<h3 class="">Client Work</h3>
 
-    404 page not found
 </article>
 
 <div class="page-navigation">
