--- a/themes/the-plain/snippets/comment.html
+++ b/themes/the-plain/snippets/comment.html
@@ -18,7 +18,7 @@
       </div>
 
   {% elif bc.comment.isGithub and not bc.comment.disabled %}
-    <div class="section has-text-centered is-fluid">
+    <div class="" style="text-align:center">
       <button id="signin_button" class="button is-medium">Go to github issue to comment</button>
     </div>
   {% endif %}
