--- a/themes/the-plain/snippets/navbar.html
+++ b/themes/the-plain/snippets/navbar.html
@@ -5,8 +5,10 @@
 </aside>
 <section>
 <aside class="" style="">
+  <a class="" href="{{ '/'|addbaseurl }}">Home</a>
   <a class="" href="{{ '/about'|addbaseurl }}">About</a>
-  <a class="" href="{{ '/about'|addbaseurl }}">Projects</a>
-  <a id="signout_button" class="" href="">Signout</a>
+  <a class="" href="{{ '/work'|addbaseurl }}">Work</a>
+  <a class="" href="{{ '/blog'|addbaseurl }}">Blog</a>
+  <a id="signout_button" class="" href="" style="display:none">Signout</a>
 </aside>
 </section>
