--- a/themes/the-plain/snippets/pagination.html
+++ b/themes/the-plain/snippets/pagination.html
@@ -1,10 +1,18 @@
 <div class="pagenav">
 <p>
 {% if pagination.prev %}
-  <a class="" rel="prev" href="{{ '/'|addbaseurl }}{{ pagination.prev }}">Prev</a>
+  {% if hasHomepage %}
+    <a class="" rel="prev" href="{{ '/blog/'|addbaseurl }}{{ pagination.prev }}">Prev</a>
+  {% else%}
+    <a class="" rel="prev" href="{{ '/'|addbaseurl }}{{ pagination.prev }}">Prev</a>
+  {% endif %}
 {% endif %}
 {% if pagination.next %}
-  <a class="" rel="next" href="{{ '/'|addbaseurl }}{{ pagination.next }}">Next</a>
+  {% if hasHomepage %}
+    <a class="" rel="next" href="{{ '/blog/'|addbaseurl }}{{ pagination.next }}">Next</a>
+  {% else%}
+    <a class="" rel="next" href="{{ '/'|addbaseurl }}{{ pagination.next }}">Nexk</a>
+  {% endif %}
 {% endif %}
 </p>
 </div>
