--- a/themes/the-plain/snippets/base.html
+++ b/themes/the-plain/snippets/base.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="{{ '/assets/main.css'|addbaseurl }}">
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 
-      <link rel="canonical" href="{{ ""|addbaseurl }}">
+      <link rel="canonical" href="{{ '/'|addbaseurl }}">
 
       <link rel="alternate" type="application/atom+xml" title="{{ bc.meta.blog_name }}" href="{{ '/feed.xml'|addbaseurl }}"/>
       <script>
