--- a/themes/the-plain/snippets/base.html
+++ b/themes/the-plain/snippets/base.html
@@ -8,10 +8,8 @@
       <meta name="description" content="">
 
       <link rel="icon" href="{{ '/assets/favicon.png'|addbaseurl }}">
-      <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/touch-icon.png">
 
       <link rel="stylesheet" href="{{ '/assets/main.css'|addbaseurl }}">
-      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 
       <link rel="canonical" href="{{ '/'|addbaseurl }}">
 
@@ -40,7 +38,7 @@
         {% block javascript %}
           {% if bc.comment.isGithubAuth %} <script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script> {% endif %}
           {% if bc.comment.isDisqus %} <script id="dsq-count-scr" src="//geekodour.disqus.com/count.js" async></script> {% endif %}
-          <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+          <script src={{ "/assets/vendors.js"|addbaseurl }}></script>
           <script src={{ "/assets/main.js"|addbaseurl }}></script>
         {% endblock javascript %}
 
