new theme added

--- a/scripts/themefiles/snippets/pagination.html
+++ b/scripts/themefiles/snippets/pagination.html
@@ -13,7 +13,7 @@
   {% if hasHomepage %}
     <a class="" rel="next" href="{{ '/blog/'|addbaseurl }}{{ pagination.next }}">Next</a>
   {% else%}
-    <a class="" rel="next" href="{{ '/'|addbaseurl }}{{ pagination.next }}">Nexk</a>
+    <a class="" rel="next" href="{{ '/'|addbaseurl }}{{ pagination.next }}">Next</a>
   {% endif %}
 {% endif %}
 
