--- a/themes/leonids-clone/pages/about.html
+++ b/themes/leonids-clone/pages/about.html
@@ -6,10 +6,16 @@
 {% endblock %}
 
 {% block pagecontent %}
+  <div id="page">
+    <header class="page-header">
+      <h2>About Page</h2>
+    </header>
 
-<article>
-	<h1 class="">About Page</h1>
-    I am about page
-</article>
+    <article class="page-content">
+        I am about page
+    </article>
+
+
+  </div><!-- end page content -->
 
 {% endblock %}
