--- a/themes/leonids-clone/snippets/navbar.html
+++ b/themes/leonids-clone/snippets/navbar.html
@@ -6,9 +6,11 @@
     <ul class="nav-list">
       <li class="nav-item">
         <a class="" href="{{ '/'|addbaseurl }}">Home</a>
+        <span>/</span>
       </li>
       <li class="nav-item">
         <a class="" href="{{ '/about'|addbaseurl }}">About</a>
+        <span>/</span>
       </li>
       <li class="nav-item">
         <a class="" href="{{ '/work'|addbaseurl }}">Work</a>
